# config/routes.rb
@@ -39,7 +39,7 @@
   get 'api/contributions', to: 'contributions_api#indexAPI'
   get 'api/contributions/newest', to: 'contributions_api#indexNewAPI'
   get 'api/contributions/ask', to: 'contributions_api#indexAskAPI'
-  get 'api/contributions/comments/:id', to: 'contributions_api#index_comments_contributionsAPI'
+  get 'api/contributions/:id/comments', to: 'contributions_api#index_comments_contributionsAPI'
   post 'api/contributions/new', to: 'contributions_api#createContributionAPI'
   get 'api/contributions/:id', to: 'contributions_api#show_contributionAPI'
   post 'api/contributions/:id', to: 'comments_api#createCommentAPI'
@@ -53,7 +53,7 @@
   post 'api/comments/:id', to: 'replies_api#createReplyAPI'
   put 'api/comments/:id', to: 'comments_api#updateCommentAPI'
   delete 'api/comments/:id', to: 'comments_api#destroyCommentAPI'
-  get 'api/comments/replies/:id', to: 'comments_api#index_replies_comments'
+  get 'api/comments/:id/replies', to: 'comments_api#index_replies_comments'
   post 'api/comments/:id/vote', to: 'comment_votes_api#createCommentVoteAPI'
   delete 'api/comments/:id/vote', to: 'comment_votes_api#destroyCommentVoteAPI'
   
